Added: some css variables

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,9 @@
 .app.dark {
-  --bg-color: #092952;
-  --primary-color: #dcfad5;
-  --secondary-color: #b3fca2;
+  --bg-color: #141416;
+  --inverted-bg-color: #FCFCFD;
+  --primary-color: #3772FF;
+  --primary-color-hover: #2955BF;
+  --primary-color-font: #FCFCFD;
+  --secondary-color: #777E90;
+  --devider-color: #353945;
 }
