--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,6 +1,6 @@
 .app.light {
   --bg-color: #FCFCFD;
-  --inverted-bg-color: #23262F;
+  --inverted-bg-color: #141416;
   --primary-color: #3772FF;
   --primary-color-font: #FCFCFD;
   --primary-color-hover: #2955BF;
