--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,9 +1,9 @@
 .app.light {
-  --bg-color: #FCFCFD;
+  --bg-color: #fcfcfd;
   --inverted-bg-color: #141416;
-  --primary-color: #3772FF;
-  --primary-color-font: #FCFCFD;
-  --primary-color-hover: #2955BF;
-  --secondary-color: #777E90;
-  --devider-color: #E6E8EC;
+  --primary-color: #3772ff;
+  --primary-color-font: #fcfcfd;
+  --primary-color-hover: #2955bf;
+  --secondary-color: #777e90;
+  --devider-color: #e6e8ec;
 }
