--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,4 +1,5 @@
 .navbar {
+  flex: 0 0 auto;
   height: var(--navbar-height);
   border-bottom: 1px solid var(--devider-color);
   box-sizing: border-box;
