--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
-@import "variables/global";
+@import "./variables/global";
 @import "fonts";
-@import "themes/light";
-@import "themes/dark";
+@import "./themes/light";
+@import "./themes/dark";
 
 .app {
   display: flex;
@@ -14,6 +14,8 @@
 
 .main {
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
