--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,9 @@
 .app.dark {
   --bg-color: #141416;
-  --inverted-bg-color: #FCFCFD;
-  --primary-color: #3772FF;
-  --primary-color-hover: #2955BF;
-  --primary-color-font: #FCFCFD;
-  --secondary-color: #777E90;
+  --inverted-bg-color: #fcfcfd;
+  --primary-color: #3772ff;
+  --primary-color-hover: #2955bf;
+  --primary-color-font: #fcfcfd;
+  --secondary-color: #777e90;
   --devider-color: #353945;
 }
