--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,13 +1,10 @@
 :root {
-  --font-family-main: 'Uni Neue', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
-
+  --font-family-main: "Uni Neue", system-ui, -apple-system, segoe ui, roboto, ubuntu, cantarell, noto sans, sans-serif;
   --font-size-m: 16px;
   --font-line-m: 24px;
   --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
-
   --font-size-l: 24px;
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
-
   --navbar-height: 80px;
 }
