--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,22 +1,27 @@
 .button {
   all: unset;
+  display: inline-block;
+  padding: 12px 16px;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   cursor: pointer;
+  background: var(--primary-color);
+  border-radius: 90px;
+  color: var(--primary-color-font);
+
+  &:hover {
+    background: var(--primary-color-hover);
+  }
 
   &:disabled {
     opacity: 0.5;
   }
+}
 
-  &:not(.clear) {
-    padding: 12px 16px;
-    background: var(--primary-color);
-    border-radius: 90px;
-    color: var(--primary-color-font);
-
-    &:hover {
-      background: var(--primary-color-hover);
-    }
-  }
+.clear {
+  padding: 0;
+  color: inherit;
+  background: none;
+  border-radius: 0;
 }
