Updated: global styles and variables

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,8 +3,11 @@
 @import "./themes/light";
 @import "./themes/dark";
 
-.app {
+
+.app,
+#root {
   display: flex;
+  width: 100%;
   font: var(--font-m);
   color: var(--inverted-bg-color);
   background: var(--bg-color);
