--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -7,4 +7,11 @@
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
   --navbar-height: 80px;
+  --bg-color: #fcfcfd;
+  --inverted-bg-color: #141416;
+  --primary-color: #3772ff;
+  --primary-color-font: #fcfcfd;
+  --primary-color-hover: #2955bf;
+  --secondary-color: #777e90;
+  --devider-color: #e6e8ec;
 }
