--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,18 +1,16 @@
 .button {
-  all: unset;
   display: inline-block;
+  margin: 0;
   padding: 12px 16px;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
+  font-family: var(--font-family-main);
   cursor: pointer;
-  background: var(--primary-color);
   border-radius: 90px;
-  color: var(--primary-color-font);
-
-  &:hover {
-    background: var(--primary-color-hover);
-  }
+  background: none;
+  border: 0;
+  box-sizing: border-box;
 
   &:disabled {
     opacity: 0.5;
@@ -24,4 +22,19 @@
   color: inherit;
   background: none;
   border-radius: 0;
+}
+
+.primary {
+  background: var(--primary-color);
+  color: var(--primary-color-font);
+
+  &:hover {
+    background: var(--primary-color-hover);
+  }
+}
+
+.outlined {
+  padding: 12px 16px;
+  color: var(--inverted-bg-color);
+  border: 2px solid var(--devider-color);
 }
