--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -7,8 +7,15 @@
   font: var(--font-m);
   color: var(--inverted-bg-color);
   background: var(--bg-color);
-  min-height: 100vh;
   letter-spacing: 0.03em;
+  height: 100vh;
+}
+
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .main {
