--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,8 @@
 :root {
   --font-family-main: "Uni Neue", system-ui, -apple-system, segoe ui, roboto, ubuntu, cantarell, noto sans, sans-serif;
+  --font-size-s: 14px;
+  --font-line-s: 24px;
+  --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
   --font-size-m: 16px;
   --font-line-m: 24px;
   --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
