--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,13 +1,9 @@
 .button {
   display: inline-block;
   margin: 0;
-  padding: 12px 16px;
   font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
   font-family: var(--font-family-main);
   cursor: pointer;
-  border-radius: 90px;
   background: none;
   border: 0;
   box-sizing: border-box;
@@ -15,18 +11,22 @@
   &:disabled {
     opacity: 0.5;
   }
-}
 
-.clear {
-  padding: 0;
-  color: inherit;
-  background: none;
-  border-radius: 0;
+  --font-size-s: 14px;
+  --font-line-s: 32px;
+  --font-size-m: 14px;
+  --font-line-m: 40px;
+  --font-size-l: 16px;
+  --font-line-l: 48px;
 }
 
 .primary {
   background: var(--primary-color);
   color: var(--primary-color-font);
+
+  svg {
+    fill: var(--primary-color-font);
+  }
 
   &:hover {
     background: var(--primary-color-hover);
@@ -34,7 +34,81 @@
 }
 
 .outlined {
-  padding: 12px 16px;
   color: var(--inverted-bg-color);
-  border: 2px solid var(--devider-color);
+  box-shadow: inset 0 0 0 2px var(--devider-color);
+
+  svg {
+    fill: var(--inverted-bg-color);
+  }
+}
+
+.shape {
+  &-rounded {
+    border-radius: 90px;
+
+    &.iconOnly {
+      border-radius: 50%;
+    }
+  }
+
+  &-square {
+    border-radius: 0;
+  }
+}
+
+.size {
+  &-s {
+    padding: 0 12px;
+    font-size: var(--font-size-s);
+    line-height: var(--font-line-s);
+  }
+
+  &-m {
+    padding: 0 16px;
+    font-size: var(--font-size-m);
+    line-height: var(--font-line-m);
+  }
+
+  &-l {
+    padding: 0 24px;
+    font-size: var(--font-size-l);
+    line-height: var(--font-line-l);
+  }
+}
+
+.iconOnly {
+  padding: 0;
+
+  &.size-s {
+    width: var(--font-line-s);
+    height: var(--font-line-s);
+  }
+
+  &.size-m {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+  }
+
+  &.size-l {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
+.clear {
+  padding: 0;
+  line-height: inherit;
+  color: inherit;
+  background: none;
+  border-radius: 0;
+
+  svg {
+    fill: var(--inverted-bg-color);
+  }
 }
