--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,3 +1,5 @@
+@import "./src/app/styles/helpers/helpers";
+
 :root {
   --font-family-main: "Uni Neue", system-ui, -apple-system, segoe ui, roboto, ubuntu, cantarell, noto sans, sans-serif;
   --font-size-s: 14px;
@@ -11,10 +13,17 @@
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
   --navbar-height: 80px;
   --bg-color: #fcfcfd;
+  --bg-color-rgb: #{hex-to-rgb(#fcfcfd)};
   --inverted-bg-color: #141416;
+  --inverted-bg-color-rgb: #{hex-to-rgb(#141416)};
   --primary-color: #3772ff;
   --primary-color-font: #fcfcfd;
   --primary-color-hover: #2955bf;
   --secondary-color: #777e90;
   --devider-color: #e6e8ec;
+  --neutral-color-2: #23262f;
+  --neutral-color-2-rgb: #{hex-to-rgb(#23262f)};
+
+  // z-indexes
+  --modal-z-index: 10;
 }
