--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -48,8 +48,7 @@
   }
 }
 
-:global(.app.light),
-.modal:global(.light) {
+:global(.app_theme_light) {
   .overlay {
     background: rgba(var(--inverted-bg-color-rgb), 0.9);
   }
@@ -60,8 +59,7 @@
   }
 }
 
-:global(.app.dark),
-.modal:global(.dark) {
+:global(.app_theme_dark) {
   .overlay {
     background: rgba(var(--neutral-color-2-rgb), 0.9);
   }
