--- a/src/app/styles/fonts.scss
+++ b/src/app/styles/fonts.scss
@@ -15,3 +15,30 @@
   font-weight: bold;
   font-style: normal;
 }
+
+@font-face {
+  font-family: Montserrat;
+  src:
+    url("../../../public/fonts/Montserrat-Regular.woff2") format("woff2"),
+    url("../../../public/fonts/Montserrat-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src:
+    url("../../../public/fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../../../public/fonts/Montserrat-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Montserrat;
+  src:
+    url("../../../public/fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("../../../public/fonts/Montserrat-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
