--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -2,6 +2,16 @@
 
 :root {
   --font-family-main: "Uni Neue", system-ui, -apple-system, segoe ui, roboto, ubuntu, cantarell, noto sans, sans-serif;
+  --font-family-secondary:
+    "Montserrat",
+    system-ui,
+    -apple-system,
+    segoe ui,
+    roboto,
+    ubuntu,
+    cantarell,
+    noto sans,
+    sans-serif;
   --font-size-s: 14px;
   --font-line-s: 24px;
   --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
@@ -23,6 +33,8 @@
   --devider-color: #e6e8ec;
   --neutral-color-2: #23262f;
   --neutral-color-2-rgb: #{hex-to-rgb(#23262f)};
+  --neutral-color-4: #353945;
+  --neutral-color-5: #b1b5c3;
 
   // z-indexes
   --modal-z-index: 10;
