Fixed: input color

--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -14,7 +14,7 @@
   width: 100%;
   padding: 12px 16px;
   box-sizing: border-box;
-  color: inherit;
+  color: var(--inverted-bg-color);
   font-weight: 500;
   font-size: var(--font-size-s);
   line-height: var(--font-line-s);
