--- a/src/shared/ui/Preloader/Preloader.module.scss
+++ b/src/shared/ui/Preloader/Preloader.module.scss
@@ -1,5 +1,6 @@
 .preloader {
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
   position: relative;
   width: 80px;
   height: 80px;
