Updated: Button and all buttons

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,7 @@
 .button {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   font-weight: bold;
   font-family: var(--font-family-main);
@@ -11,6 +13,10 @@
   &_disabled {
     opacity: 0.5;
     cursor: auto;
+  }
+
+  &_reverse {
+    flex-direction: row-reverse;
   }
 
   --font-size-s: 14px;
@@ -25,82 +31,10 @@
   background: var(--primary-color);
   color: var(--primary-color-font);
 
-  svg {
-    fill: var(--primary-color-font);
-  }
-
   &:hover {
     &:not(.button_disabled) {
       background: var(--primary-color-hover);
     }
-  }
-}
-
-.outlined {
-  color: var(--inverted-bg-color);
-  box-shadow: inset 0 0 0 2px var(--devider-color);
-
-  svg {
-    fill: var(--inverted-bg-color);
-  }
-}
-
-.shape {
-  &-rounded {
-    border-radius: 90px;
-
-    &.iconOnly {
-      border-radius: 50%;
-    }
-  }
-
-  &-square {
-    border-radius: 0;
-  }
-}
-
-.size {
-  &-s {
-    padding: 0 12px;
-    font-size: var(--font-size-s);
-    line-height: var(--font-line-s);
-  }
-
-  &-m {
-    padding: 0 16px;
-    font-size: var(--font-size-m);
-    line-height: var(--font-line-m);
-  }
-
-  &-l {
-    padding: 0 24px;
-    font-size: var(--font-size-l);
-    line-height: var(--font-line-l);
-  }
-}
-
-.iconOnly {
-  padding: 0;
-
-  &.size-s {
-    width: var(--font-line-s);
-    height: var(--font-line-s);
-  }
-
-  &.size-m {
-    width: var(--font-line-m);
-    height: var(--font-line-m);
-  }
-
-  &.size-l {
-    width: var(--font-line-l);
-    height: var(--font-line-l);
-  }
-
-  svg {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
   }
 }
 
@@ -110,8 +44,106 @@
   color: inherit;
   background: none;
   border-radius: 0;
+}
 
-  svg {
+.iconOnly {
+  padding: 0 !important;
+}
+
+.size {
+  &_s {
+    padding: 4px 16px;
+    font-size: var(--font-size-s);
+    line-height: var(--font-line-s);
+  }
+
+  &_m {
+    padding: 0 16px;
+    font-size: var(--font-size-m);
+    line-height: var(--font-line-m);
+  }
+
+  &_l {
+    padding: 0 24px;
+    font-size: var(--font-size-l);
+    line-height: var(--font-line-l);
+  }
+}
+
+.outlined {
+  color: var(--inverted-bg-color);
+  box-shadow: inset 0 0 0 2px var(--devider-color);
+
+  &:hover {
+    color: var(--bg-color);
+    box-shadow: inset 0 0 0 2px var(--neutral-color-2);
+    background: var(--neutral-color-2);
+  }
+}
+
+.shape {
+  &_rounded {
+    border-radius: 90px;
+
+    &.iconOnly {
+      border-radius: 50%;
+    }
+  }
+
+  &_square {
+    border-radius: 0;
+  }
+}
+
+.icon {
+  .primary & {
+    fill: var(--primary-color-font);
+  }
+
+  .clear & {
     fill: var(--inverted-bg-color);
+  }
+
+  .outlined & {
+    fill: var(--inverted-bg-color);
+  }
+
+  .outlined:hover & {
+    fill: var(--bg-color);
+  }
+
+  &_size {
+    &_s {
+      width: 16px;
+      height: 16px;
+
+      &.icon_position_left {
+        margin-right: 12px;
+      }
+
+      &.icon_position_right {
+        margin-left: 12px;
+      }
+    }
+
+    &_m {
+      width: 24px;
+      height: 24px;
+
+      &.icon_position {
+        &_left {
+          margin-right: 16px;
+        }
+
+        &_right {
+          margin-left: 16px;
+        }
+      }
+    }
+
+    &_l {
+      width: 32px;
+      height: 32px;
+    }
   }
 }
