--- a/src/shared/ui/ThemeSwitcher/ui/ThemeSwitcher.module.scss
+++ b/src/shared/ui/ThemeSwitcher/ui/ThemeSwitcher.module.scss
@@ -8,8 +8,6 @@
   cursor: pointer;
 }
 
-.icon {
-  width: 24px;
-  height: 24px;
-  object-fit: contain;
+.inverted {
+  fill: var(--bg-color) !important;
 }
