Fixed: typings, added: profile, fixed: tests

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -7,4 +7,5 @@
   --inverted-bg-color-rgb: #{hex-to-rgb(#fcfcfd)};
   --secondary-color: #777e90;
   --devider-color: #353945;
+  --neutral-color-2: #fcfcfd;
 }
