--- a/src/app/styles/helpers/helpers.scss
+++ b/src/app/styles/helpers/helpers.scss
@@ -1,3 +1,19 @@
 @function hex-to-rgb($hex) {
   @return red($hex), green($hex), blue($hex);
 }
+
+@mixin scrollbar() {
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color); /* цвет плашки */
+    border-radius: 2px; /* закругления плашки */
+    border: 1px solid var(--primary-color); /* padding вокруг плашки */
+  }
+}
