--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -25,7 +25,7 @@ body,
 }
 
 .main {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
 }
@@ -37,5 +37,8 @@ body,
 }
 
 .main-content {
-  padding: 24px;
+  padding: 40px 32px;
+  overflow-y: auto;
+
+  @include scrollbar;
 }
