Updated: navbar paddings

--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -6,5 +6,5 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  padding: 0 12px;
+  padding: 0 28px; // todo: если не будет кнопки с краю, вернуть 32px
 }
