--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -67,9 +67,21 @@
   box-shadow: inset 0 0 0 2px var(--devider-color);
 
   &:hover {
-    color: var(--bg-color);
-    box-shadow: inset 0 0 0 2px var(--neutral-color-2);
-    background: var(--neutral-color-2);
+    &:not(.button_disabled) {
+      color: var(--bg-color);
+      box-shadow: inset 0 0 0 2px var(--neutral-color-2);
+      background: var(--neutral-color-2);
+    }
+  }
+}
+
+.red_outlined {
+  color: var(--error-color);
+  box-shadow: inset 0 0 0 2px var(--error-color);
+
+  &:hover {
+    color: var(--primary-color-font);
+    background: var(--error-color);
   }
 }
 
@@ -108,8 +120,16 @@
     fill: var(--inverted-bg-color);
   }
 
-  .outlined:hover & {
+  .red_outlined & {
+    fill: var(--error-color);
+  }
+
+  .outlined:not(.button_disabled):hover & {
     fill: var(--bg-color);
+  }
+
+  .red_outlined:not(.button_disabled):hover & {
+    fill: var(--primary-color-font);
   }
 
   &_size {
@@ -118,11 +138,11 @@
       height: 16px;
 
       &.icon_position_left {
-        margin-right: 8px;
+        margin-right: 4px;
       }
 
       &.icon_position_right {
-        margin-left: 8px;
+        margin-left: 4px;
       }
     }
 
@@ -132,11 +152,11 @@
 
       &.icon_position {
         &_left {
-          margin-right: 12px;
+          margin-right: 8px;
         }
 
         &_right {
-          margin-left: 12px;
+          margin-left: 8px;
         }
       }
     }
