--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -1,10 +1,18 @@
-.header {
+.avatar {
+  margin-bottom: 32px;
+}
+
+.fields {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
 .input {
-  margin: 32px 0;
-  max-width: 400px;
+  width: calc(50% - 12px);
+  margin-bottom: 32px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
