Created: new theme - colored

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -8,4 +8,5 @@
   --secondary-color: #777e90;
   --devider-color: #353945;
   --neutral-color-2: #fcfcfd;
+  --sidebar-bg: var(--inverted-bg-color);
 }
