--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -7,4 +7,5 @@
   --inverted-bg-color-rgb: #{hex-to-rgb(#141416)};
   --secondary-color: #777e90;
   --devider-color: #e6e8ec;
+  --sidebar-bg: var(--inverted-bg-color);
 }
