--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   border-right: 1px solid var(--devider-color);
   color: var(--bg-color);
-  background: var(--inverted-bg-color);
+  background: var(--sidebar-bg);
   transition: transform 0.3s, margin-right 0.3s, width 0.3s;
 }
 
