Added: new css variables

--- a/src/app/styles/themes/colored.scss
+++ b/src/app/styles/themes/colored.scss
@@ -17,4 +17,8 @@
   --error-color: #f61344;
   --error-color-rgb: #{hex-to-rgb(#f61344)};
   --sidebar-bg: #141416;
+
+  // skeleton
+  --skeleton-bg-start: #6c96fd;
+  --skeleton-bg-end: #3772ff;
 }
