--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -9,4 +9,8 @@
   --devider-color: #353945;
   --neutral-color-2: #fcfcfd;
   --sidebar-bg: var(--inverted-bg-color);
+
+  // skeleton
+  --skeleton-bg-start: #131315;
+  --skeleton-bg-end: #2f313a;
 }
