--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -38,6 +38,7 @@
   --neutral-color-5: #b1b5c3;
   --error-color: #ef466f;
   --error-color-rgb: #{hex-to-rgb(#ef466f)};
+  --success-color: #45b26b;
 
   // skeleton
   --skeleton-bg-start: #f4f5f6;
