--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -12,6 +12,7 @@
 
   // skeleton
   --skeleton-bg: #eaedf5;
+  --skeleton-bg-rgb: #{hex-to-rgb(#eaedf5)};
   --skeleton-effect: #fcfcfd;
   --skeleton-effect-rgb: #{hex-to-rgb(#fcfcfd)};
 }
