--- a/src/shared/ui/Code/Code.module.scss
+++ b/src/shared/ui/Code/Code.module.scss
@@ -2,10 +2,9 @@
   position: relative;
   padding: 24px;
   border-radius: 16px;
-  border: 1px solid var(--devider-color);
+  border: 1px solid rgba(var(--devider-color-rgb), 0.5);
   background: rgba(var(--inverted-bg-color-rgb), 0.03);
   font-size: 14px;
-  box-shadow: inset 0 0 8px rgba(var(--inverted-bg-color-rgb), 0.03);
   overflow: auto;
 }
 
