--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -40,12 +40,17 @@ body,
 .main-content {
   padding: 40px 32px;
   overflow-y: auto;
+  height: 100%;
 
   @include scrollbar;
 }
 
 .inner-content {
   max-width: 864px;
+
+  &--large {
+    max-width: 1120px;
+  }
 }
 
 img {
