Updated: article list extra item styles

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -145,8 +145,10 @@
   margin-right: 8px;
 }
 
-.subtitle {
-  margin-top: 0.4em;
+.title {
+  .outer_grid_extra & {
+    max-width: 460px;
+  }
 }
 
 .footer {
