--- a/src/widgets/Page/Page.module.scss
+++ b/src/widgets/Page/Page.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../src/app/styles/helpers/helpers";
+@import "../../app/styles/helpers/helpers";
 
 .outer {
   padding: 40px 32px;
