--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -1,4 +1,5 @@
 .label {
+  position: relative;
   padding-left: 2px;
   margin-bottom: 1em;
   font-weight: bold;
@@ -10,11 +11,9 @@
 
 .select {
   width: 100%;
-  padding: 12px 16px;
   box-sizing: border-box;
   color: var(--inverted-bg-color);
   font-weight: 500;
-  font-size: var(--font-size-s);
   line-height: var(--font-line-s);
   font-family: var(--font-family-secondary);
   outline: none;
@@ -26,8 +25,21 @@
   background-color: transparent;
   background-image: url("shared/assets/icons/ArrowDownLine.svg");
   background-size: 24px 24px;
-  background-position: center right 10px;
   background-repeat: no-repeat;
+
+  &_size {
+    &_S {
+      padding: 8px 32px 8px 14px;
+      font-size: 13px;
+      background-position: center right 6px;
+    }
+
+    &_M {
+      padding: 12px 32px 12px 16px;
+      font-size: var(--font-size-s);
+      background-position: center right 10px;
+    }
+  }
 }
 
 .disabled {
