--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -34,7 +34,9 @@
   --devider-color: #e6e8ec;
   --neutral-color-2: #23262f;
   --neutral-color-2-rgb: #{hex-to-rgb(#23262f)};
-  --neutral-color-4: #353945;
+  --neutral-color-3: #353945;
+  --neutral-color-3-rgb: #{hex-to-rgb(#353945)};
+  --neutral-color-4: #777e90;
   --neutral-color-5: #b1b5c3;
   --error-color: #ef466f;
   --error-color-rgb: #{hex-to-rgb(#ef466f)};
