--- a/src/widgets/Page/Page.module.scss
+++ b/src/widgets/Page/Page.module.scss
@@ -1,7 +1,7 @@
 @import "../../app/styles/helpers/helpers";
 
 .outer {
-  padding: 40px 32px;
+  padding: 40px;
   overflow-y: auto;
   height: 100%;
 
