--- a/src/shared/ui/AppLink/AppLink.module.scss
+++ b/src/shared/ui/AppLink/AppLink.module.scss
@@ -1,11 +1,6 @@
 .link {
   text-decoration: none;
-  color: var(--primary-color);
   transition: background-color 0.1s ease, border-color 0.1s ease, box-shadow 0.1s ease, color 0.1s ease, fill 0.1s ease;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 .primary {
@@ -14,4 +9,15 @@
 
 .secondary {
   color: var(--secondary-color);
+}
+
+.primary,
+.secondary {
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.clear {
+  color: inherit;
 }
