--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -2,14 +2,16 @@
   margin-bottom: 24px;
 }
 
-.comments {
+.comments,
+.recommend {
   margin-top: 40px;
   padding-top: 40px;
   border-top: 1px solid var(--devider-color);
 }
 
-.comments_title {
-  margin-bottom: 1px;
+.comments_title,
+.recommend_title {
+  margin-bottom: 1em;
 }
 
 .comments_form {
