--- a/src/widgets/Page/Page.module.scss
+++ b/src/widgets/Page/Page.module.scss
@@ -2,9 +2,17 @@
 
 .outer {
   width: 100%;
-  padding: 40px;
   box-sizing: border-box;
   overflow-y: auto;
 
   @include scrollbar;
+}
+
+.header {
+  padding: 24px 40px;
+  border-bottom: 1px solid var(--devider-color);
+}
+
+.content {
+  padding: 40px;
 }
