Added: logo to sidebar

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   width: 240px;
-  padding: var(--navbar-height) 0 0;
   box-sizing: border-box;
   border-right: 1px solid var(--devider-color);
   color: var(--bg-color);
@@ -14,6 +13,46 @@
 
 .collapsed {
   width: 64px;
+}
+
+.logo {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: var(--navbar-height);
+  margin-bottom: 16px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background: var(--bg-color);
+    opacity: 0.1;
+  }
+
+  &_size {
+    &_s {
+      justify-content: center;
+    }
+
+    &_l {
+      padding-left: 16px;
+    }
+  }
+}
+
+.logo_pic {
+  position: relative;
+  top: -2px;
+  height: 42px;
+  fill: var(--bg-color);
+
+  .logo_size_s & {
+    left: -2px;
+  }
 }
 
 .actions {
