--- a/src/widgets/Page/Page.module.scss
+++ b/src/widgets/Page/Page.module.scss
@@ -9,7 +9,9 @@
 }
 
 .header {
-  padding: 24px 40px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  min-height: 40px;
   border-bottom: 1px solid var(--devider-color);
 }
 
