Updated: article card bg

--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -34,7 +34,7 @@
   height: 300px;
   border-radius: 16px;
   overflow: hidden;
-  background: var(--primary-color);
+  background: var(--skeleton-bg);
   isolation: isolate;
 
   &_skeleton {
