Updated: added V/HStacks

--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -1,18 +1,14 @@
 .link {
-  display: flex;
-  align-items: center;
   padding: 12px;
+
+  &_collapsed {
+    padding: 8px 0;
+  }
 
   &:hover {
     background: var(--primary-color);
     text-decoration: none;
   }
-}
-
-.collapsed {
-  width: 100%;
-  flex-direction: column;
-  padding: 8px 0;
 }
 
 .linkIcon {
@@ -27,7 +23,7 @@
     top: -2px;
   }
 
-  .collapsed & {
+  .link_collapsed & {
     margin-right: 0;
     top: 0;
   }
@@ -44,7 +40,7 @@
   white-space: nowrap;
   color: var(--bg-color);
 
-  .collapsed & {
+  .link_collapsed & {
     font-size: 8px;
   }
 
