Added: some global styles

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -38,6 +38,7 @@
   --neutral-color-3-rgb: #{hex-to-rgb(#353945)};
   --neutral-color-4: #777e90;
   --neutral-color-5: #b1b5c3;
+  --neutral-color-7: #f4f5f6;
   --error-color: #ef466f;
   --error-color-rgb: #{hex-to-rgb(#ef466f)};
   --success-color: #45b26b;
