Added: storybook mock api, fixed stories

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   flex: 0 0 auto;
   width: 240px;
+  height: 100%;
   box-sizing: border-box;
   border-right: 1px solid var(--devider-color);
   color: var(--bg-color);
