--- a/src/shared/ui/Popups/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/Popups/ui/Dropdown/Dropdown.module.scss
@@ -1,45 +1,16 @@
-.outer {
-  position: relative;
-  width: fit-content;
-
-  &_width {
-    &_full {
-      width: 100%;
-    }
-
-    &_fix {
-      width: 256px;
-    }
-
-    &_minFix {
-      min-width: 256px;
-    }
-  }
-}
-
 .btn {
-  all: unset;
-  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  background: none;
 }
 
 .items {
-  position: absolute;
   width: 100%;
   min-width: 256px;
-  padding: 12px 16px;
-  outline: none;
-  border-radius: 12px;
-  background: var(--bg-color);
-  box-shadow: 0 16px 64px -16px rgba(#1f2f46, 0.4);
-  box-sizing: border-box;
-}
-
-.title {
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 24px;
-  line-height: 32px;
-  font-family: var(--font-family-secondary);
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .item {
