--- a/src/features/notificationButton/ui/NotificationButton/NotificationButton.module.scss
+++ b/src/features/notificationButton/ui/NotificationButton/NotificationButton.module.scss
@@ -1,4 +1,5 @@
 .trigger {
+  position: relative;
   width: 40px;
   height: 40px;
 }
@@ -32,4 +33,8 @@
   &_new {
     background: var(--success-color);
   }
+}
+
+.list {
+  width: 344px;
 }
