Fixed: scss files absolute paths

--- a/src/shared/ui/Popups/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/Popups/ui/ListBox/ListBox.module.scss
@@ -49,7 +49,7 @@
     right: 12px;
     width: 24px;
     height: 24px;
-    background: url("shared/assets/icons/ArrowDownLine.svg") center/cover no-repeat;
+    background: url("@/shared/assets/icons/ArrowDownLine.svg") center/cover no-repeat;
   }
 }
 
