--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -23,7 +23,7 @@
   appearance: none;
   cursor: pointer;
   background-color: transparent;
-  background-image: url("shared/assets/icons/ArrowDownLine.svg");
+  background-image: url("@/shared/assets/icons/ArrowDownLine.svg");
   background-size: 24px 24px;
   background-repeat: no-repeat;
 
