--- a/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
+++ b/src/entities/Article/ui/ArticleListItem/ArticleListItem.module.scss
@@ -44,15 +44,17 @@
   .outer_list & {
     margin-bottom: 24px;
   }
+
+  .outer:hover & {
+    background: var(--primary-color);
+  }
 }
 
 .pic {
-  transition:
-    opacity 0.2s ease-in-out,
-    transform 0.2s ease-in-out;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 0.2s ease-in-out;
 
   .outer:hover & {
     transform: scale(1.1);
