Added: loki animation ignore

--- a/src/shared/ui/Skeleton/Skeleton.module.scss
+++ b/src/shared/ui/Skeleton/Skeleton.module.scss
@@ -19,6 +19,10 @@
         rgba(var(--skeleton-effect-rgb), 0) 90%
       );
     animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+
+    :global(*[loki-test]) & {
+      animation: none;
+    }
   }
 }
 
