--- a/src/shared/ui/Skeleton/Skeleton.module.scss
+++ b/src/shared/ui/Skeleton/Skeleton.module.scss
@@ -1,3 +1,5 @@
+@import "src/app/styles/helpers/helpers";
+
 .outer {
   position: relative;
   overflow: hidden;
@@ -20,8 +22,8 @@
       );
     animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 
-    :global(*[loki-test]) & {
-      animation: none;
+    @include loki {
+      display: none;
     }
   }
 }
