--- a/src/app/styles/themes/colored.scss
+++ b/src/app/styles/themes/colored.scss
@@ -18,6 +18,17 @@
   --error-color-rgb: #{hex-to-rgb(#f61344)};
   --sidebar-bg: #141416;
 
+  // redesigned
+  --dark-bg-redesigned: #fff3d6;
+  --bg-redesigned: #f0c048;
+  --light-bg-redesigned: #f2d791;
+  --text-redesigned: #1b1311;
+  --hint-redesigned: #b8b2a2;
+  --cancel-redesigned: #ff5e5e;
+  --save-redesigned: #52fa81;
+  --icon-redesigned: #4875f0;
+  --accent-redesigned: #1d59ff;
+
   // skeleton
   --skeleton-bg: #eaedf5;
   --skeleton-bg-rgb: #{hex-to-rgb(#a9abb0)};
