--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -10,6 +10,17 @@
   --neutral-color-2: #fcfcfd;
   --sidebar-bg: var(--inverted-bg-color);
 
+  // redesigned
+  --dark-bg-redesigned: #090f11;
+  --bg-redesigned: #0c1214;
+  --light-bg-redesigned: #151c1f;
+  --text-redesigned: #dbdbdb;
+  --hint-redesigned: #555;
+  --cancel-redesigned: #d95757;
+  --save-redesigned: #6cd98b;
+  --icon-redesigned: #74a2b2;
+  --accent-redesigned: #5ed3f3;
+
   // skeleton
   --skeleton-bg: #242426;
   --skeleton-bg-rgb: #{hex-to-rgb(#242426)};
